force-app/main/default/objects/HybridParent__c/HybridParent__c.object-meta.xml
<CustomObject>
    <description>Temporary object added by Accellor to report on Hybrid Parents.
This can be removed after all Hybrid Parents are removed and invoicing is managed only from Parent.</description>
    <label>Hybrid Parent</label>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hybrid Parents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>