force-app/main/default/objects/HybridParent__c/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hybrid Children</relationshipLabel>
    <relationshipName>HybridChildren</relationshipName>
    <type>Lookup</type>
</CustomField>