force-app/main/default/objects/HybridParent__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hybrid Parents</relationshipLabel>
    <relationshipName>HybridParents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>